--- a/authentication/templates/auth/create.html
+++ b/authentication/templates/auth/create.html
@@ -12,7 +12,7 @@
 </div>
 {% endblock content_head %}
 {% block content %}
-<div class="card mb-10">
+<div class="card card-form mb-10">
   <form method="post">
     {% csrf_token %} {% for field in form %}
     <div class="form-group">
