--- a/orders/templates/orders/create-client.html
+++ b/orders/templates/orders/create-client.html
@@ -8,7 +8,7 @@
 {% block content_head %}
 <div class="content-head">
   <div class="left">
-      <a href="#" class="btn btn-link btn-small">
+      <a href="{% url 'orders:index' %}" class="btn btn-link btn-small">
         <i class='bx bx-left-arrow-alt bx-sm'></i>
       </a>
       <h4>Registrar pedido</h4>
