--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');
 
 body{
     --primary-color: 33, 0, 136;
@@ -38,6 +38,7 @@ body.dark{
 .w-full{
     width: 100%;
 }
+
 @media (min-width: 1024px){
     .container{
         max-width: 980px;
