--- a/clients/templates/clients/edit.html
+++ b/clients/templates/clients/edit.html
@@ -1,13 +1,15 @@
 {% extends "layouts/admin.html" %} {% block title %}
-<title>Cuy Click Perú - Editar motorizado</title>
-{% endblock title %} 
+<title>Cuy Click Perú - {{ title }}</title>
+{% endblock title %}
+
 {% block content_head %}
+{% url 'clients:index' as clients_url %} 
 <div class="content-head">
   <div class="left">
-      <a href="{% url 'drivers:index' %}" class="btn btn-link btn-small">
+      <a href="{{ clients_url }}" class="btn btn-link btn-small">
         <i class='bx bx-left-arrow-alt bx-sm'></i>
       </a>
-      <h4>Editar motorizado</h4>
+      <h4>{{ title }}</h4>
   </div>
   <div class="right">
       <a href="{% url 'auth:create' %}?next={{request.path|urlencode}}" class="btn btn-link btn-small text-primary">Nuevo usuario</a>
@@ -32,7 +34,7 @@
     </div>
     {% endfor %}
     <div class="actions right">
-      <a href="{% url 'drivers:index' %}" class="btn btn-default">Cancelar</a>
+      <a href="{{ clients_url }}" class="btn btn-default">Cancelar</a>
       <button type="submit" class="btn btn-primary">Editar</button>
     </div>
   </form>
