--- a/static/css/components/card.css
+++ b/static/css/components/card.css
@@ -44,6 +44,9 @@
 .card-form{
     width: 100%;
 }
+.bg-primary{
+    background: rgb(var(--primary-color));
+}
 
 @media (min-width: 768px) { 
     .actions{
