--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,6 +3,7 @@
 
 @import 'helpers/form-grid.css';
 @import 'helpers/flex.css';
+@import 'helpers/rounded.css';
 @import 'helpers/spacing.css';
 @import 'helpers/typography.css';
 
@@ -16,11 +17,17 @@
 @import 'components/dropdown.css';
 @import 'components/forms.css';
 @import 'components/icon.css';
+@import 'components/modal.css';
 @import 'components/navbar.css';
+@import 'components/options.css';
 @import 'components/pagination.css';
 @import 'components/tabbar.css';
 @import 'components/table.css';
 
+@import 'pages/address-list.css';
 @import 'pages/admin-content.css';
 @import 'pages/auth.css';
+@import 'pages/client-list.css';
 @import 'pages/order-create.css';
+@import 'pages/order-list.css';
+@import 'pages/profile.css';
