--- a/clients/templates/clients/create.html
+++ b/clients/templates/clients/create.html
@@ -35,7 +35,7 @@
       </div>
       {% endfor %}
     <div class="actions right mt-5">
-      <a href="{% url 'drivers:index' %}" class="btn btn-default">Cancelar</a>
+      <a href="{% url 'clients:index' %}" class="btn btn-default">Cancelar</a>
       <button type="submit" class="btn btn-primary">Guardar</button>
     </div>
   </form>
