--- a/static/css/pages/address-list.css
+++ b/static/css/pages/address-list.css
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
     text-decoration: none;
 }
 .address-item .address-detail .icon-view .btn{ 
