--- a/static/css/components/buttons.css
+++ b/static/css/components/buttons.css
@@ -22,6 +22,10 @@
 .btn.btn-small{
     padding: 12px 24px;
 }
+.btn.btn-xsmall{
+    padding: 4px 6px;
+    border-radius: 4px;
+}
 .btn-circle{
     border-radius: 50%;
     padding: 16px;
@@ -89,4 +93,7 @@
 .btn-full{
     width: 100%;
     text-align: center;
+}
+.cursor-pointer{
+    cursor: pointer;
 }
