--- a/static/css/helpers/spacing.css
+++ b/static/css/helpers/spacing.css
@@ -9,8 +9,13 @@
     margin-left: calc(.63rem * (1 - var(--space-x-reverse)));
 }
 .m-0{
-    margin: 0;
+    margin: 0 !important;
 }
+
+.mr-1{
+    margin-right: 0.25rem !important;
+}
+
 .mb-2{
     margin-bottom: 0.5rem !important;
 }
@@ -35,6 +40,15 @@
 }
 .mt-4{
     margin-top: 1rem !important;
+}
+.mt-5{
+    margin-top: 1.5rem !important;
+}
+.mt-6{
+    margin-top: 2rem !important;
+}
+.mt-7{
+    margin-top: 3rem !important;
 }
 .mt-8{
     margin-top: 4rem !important;
