--- a/static/css/helpers/typography.css
+++ b/static/css/helpers/typography.css
@@ -37,7 +37,7 @@ h6, .h6{
     font-size: 14px;
     text-transform: uppercase;
 }
-p{
+p, .text-base{
     color: var(--text-color);
     font-size: 15px;
     line-height: 25px;
