--- a/static/css/pages/order-create.css
+++ b/static/css/pages/order-create.css
@@ -9,7 +9,7 @@
     margin-left: 15px;
 }
 .order-content .tracking-code{
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 .order-content .client-info{
     display: grid;
@@ -115,7 +115,101 @@
     object-fit: contain;
     aspect-ratio: 4 / 2;
 }
+.create-order{
+    margin-left: -20px;
+    border-radius: 16px 16px 0 0;
+    width: 100vw;
+}
+.order-content-2{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 30px;
+}
+.order-content-2 .order-addresess-2 .address-item:nth-child(n+2){
+    margin-top: 25px;
+}
+.order-content-2 .order-addresess-2 .address-item{
+    border-top: 1px solid var(--btn-default-color);
+    border-bottom: 1px solid var(--btn-default-color);
+    padding: 20px 0;
+}
+.order-content-2 .order-addresess-2 .address-item .address-head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.order-content-2 .order-addresess-2 .address-item .address-delivered{
+    display: grid;
+    grid-template-columns: 1fr 3rem 1fr;
+    gap: 20px;
+    margin: 20px 0;
+}
+.order-content-2 .order-addresess-2 .address-item .address-delivered .address-destiny{
+    justify-self: end;
+    text-align: right;
+}
+.order-content-2 .order-addresess-2 .address-item .address-delivered h6{
+    font-size: 12px;
+}
+.order-content-2 .order-addresess-2 .address-item .address-delivered .order-icon{
+    justify-self: center;
+    filter: invert(49%) sepia(67%) saturate(4636%) hue-rotate(0deg) brightness(101%) contrast(106%);
+}
+.order-content-2 .order-addresess-2 .address-order-summary{
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    background: var(--btn-default-color);
+    padding: 20px;
+    text-align: center;
+}
+.order-content-2 .order-addresess-2 .address-order-summary .rate{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.order-content-2 .order-addresess-2 .address-order-detail .footer-details .package{
+    display: flex;
+}
+.order-content-2 .order-addresess-2 .address-order-detail .footer-details .package .package-picture{
+    width: 90px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 10px !important;
+    background: rgba(var(--accent-color), .2);
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.order-content-2 .order-addresess-2 .address-order-detail .footer-details .package .package-picture img{
+    width: 90px;
+    background: rgba(var(--accent-color), .2);
+    border-radius: 8px;
+    aspect-ratio: 4 / 3;
+    object-fit: contain;
+}
+.order-content-2 .order-addresess-2 .address-order-detail .footer-details .package .package-details{
+    margin-left: 15px;
+}
+.order-content-2 .order-total-2{
+    padding: 20px;
+    margin-left: -20px;
+    margin-right: -20px;
+    background: var(--btn-default-color);
+}
+.order-content-2 .order-total-2 .order-row{
+    display: grid;
+    grid-template-columns: 70% 30%;
+    grid-template-rows: auto;
+    align-items: center;
+}
 @media (min-width: 768px){
+    .create-order{
+        margin-left: 0px;
+        border-radius: 16px;
+        width: inherit;
+    }
     .order-details .order-details-head{
         flex-direction: row;
         align-items: flex-end;
@@ -155,6 +249,19 @@
     }
     .order-details .order-details-content .order-details-item .footer .summary .tracking-price{ 
         margin-top: 1rem;
+    }
+    .order-content-2{
+        grid-template-columns: 1fr .6fr;
+    }
+    .order-content-2 .order-addresess-2 .address-item .address-delivered{
+        grid-template-columns: 1fr 7rem 1fr;
+    }
+    .order-content-2 .order-addresess-2 .address-item .address-delivered h6{
+        font-size: 15px;
+    }
+    .order-content-2 .order-total-2{
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 @media (min-width: 1024px){
