--- a/templates/layouts/admin.html
+++ b/templates/layouts/admin.html
@@ -8,7 +8,8 @@
     {% block title %}
     <title>Cuy Click Perú - Courier</title>
     {% endblock title %}
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <link href="{% static 'vendors/boxicons/css/boxicons.min.css' %}" rel='stylesheet'>
+    <link href="{% static 'vendors/balloon/css/balloon.css' %}" rel='stylesheet'>
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     {% block styles %} {% endblock styles %}
